# iie-qq-bot

./: .env  .gitignore  README.md  docker-compose.yml  main.py  nohup.out  pyproject.toml  select * from public.sql
.claude/: settings.local.json
kun/amr/: no.amr  ok.amr  你干嘛哎哟.amr  全民制作人.amr  兰亭鸡序.amr  前奏.amr  厉不厉害.amr  唱跳rap篮球.amr  多多为我投票.amr  曹鸡.amr  最伟大的鸡.amr  本草鸡目.amr  狗狗来叫一个.amr  看镜头.amr  跟我学的呀.amr  野鸡disco.amr  鸡你太美.amr  鸡勇者.amr
plugins/: __init__.py
plugins/group_guard/: __init__.py  config.py
plugins/group_stats/: __init__.py  chart.py  config.py  db.py  message_stats.py  models.py  scheduler.py  service.py
plugins/kun_response/: __init__.py
plugins/supervisor/: __init__.py  config.py
plugins/wangdao/: __init__.py  config.py
scripts/: convert_kun_audio.py  kill_bot.sh  start_bg.sh  start_uv.sh
shipyard-neo/: .gitignore  .pre-commit-config.yaml  README.md
shipyard-neo/.github/workflows/: cd.yml  ci.yml  nightly-browser-e2e.yml
shipyard-neo/deploy/docker/: README.md  config.yaml  docker-compose.with-astrbot.yaml  docker-compose.yaml
shipyard-neo/doc/: agent_browser_guide.md  bay_abstract_entities.md  bay_api_v1.md  bay_error_codes.md  browser_self_update_intro_zh.md  browser_self_update_usage_zh.md  gull_browser_runtime.md  ship_architecture.md  skills_enhancement_roadmap_zh.md  skills_self_update_guide_zh.md
shipyard-neo/plans/: skill-candidate-injection-design.md
shipyard-neo/shipyard-neo-mcp/: .gitignore  README.md  pyproject.toml
shipyard-neo/shipyard-neo-sdk/: README.md  README.zh-CN.md  pyproject.toml
(+239 files in other folders)
